--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,4 @@
-<<<<<<< HEAD
-*.class
-=======
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-# Project environment
-.idea
+*.class
 .vscode
-.obsidian
->>>>>>> b4f97aeb4a7e7c0344ef046b075bbaa25eb8eb2f
+build
