--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,3 @@
-*.jar
-*.class
-.vscode
-build
-.build
-.deprecated
-.idea
-/Final/
-/Others/
-/Updates
-/experimentations
-/src/click_game/
-/out
-/META-INF/
-.exp
-click_game
+# Default ignored files
+/shelf/
+/workspace.xml
