--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>ClickGame2</name>
-	<comment>Project ClickGame2 created by Buildship.</comment>
+	<comment>Clic created by exoad</comment>
 	<projects>
 	</projects>
 	<buildSpec>
