--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-
-apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'application'
 
@@ -7,7 +5,7 @@ repositories {
   mavenCentral()
 }
 
-mainClassName = 'clic.Runner'
+mainClassName = 'src.main.java.clic.Runner'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -20,7 +18,7 @@ dependencies {
 
 //tag::jar[]
 jar {
-    archiveBaseName = 'clic' as Property<String>
-    archiveVersion = '0.1.0' as Property<String>
+    archiveBaseName = 'clic'
+    archiveVersion = '0.1.0'
 }
 //end::jar[]
